# django-demo-railway-deploy

./: Makefile  pyproject.toml
core/: settings.py  urls.py
templates/: home.html  login.html
templates/layouts/: default.html
