[tool.poetry]
name = "django-demo-app-railway-deploy"
version = "0.1.0"
description = ""
authors = ["Abdujabbar MIRKHALIKOV <abdujabbar.mirkhalikov@prestataire.sewan.fr>"]
readme = "README.md"
packages = [{include = "django_demo_app_railway_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
dj-database-url = "^1.2.0"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
asgiref = "^3.5.2"
bootstrap4 = "^0.1.0"
pip = "^22.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
