[tool.poetry]
name = "django-demo-app-railway-deploy"
version = "0.1.0"
description = ""
authors = ["Abdujabbar MIRKHALIKOV <abdujabbar.mirkhalikov@prestataire.sewan.fr>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
Django = "^4.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
