[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Abdujabbar MIRKHALIKOV <abdujabbar.mirkhalikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
Django = "^4.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
